# nvidia-personaplex-modal

./: .gitignore  PLAN.md  README.md  personaplex.py  pyproject.toml
static/: index.html
